2007-01-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated to reflect recent tests

	* NEWS: Consistancy and language improved. Thanks to Erik for his
	valuable comments.

2007-01-17  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/base/gf2mat.h, itpp/base/gf2mat.cpp, itpp/comm/ldpc.cpp:
	Changed int to bool and vice versa for code portability

2007-01-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.h: Fixed bug [1635988] by implementing the
	twist() function in a similar way as the original TWIST() macro
	from Takuji Nishimura's and Makoto Matsumoto's C sources.

	* win32/itpp.vcproj: Updated to reflect recent changes in source
	files' locations

2007-01-16  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, tests/ldpc_test.ref: Changed rand() to
	randi() for code portability and to use it++ routines for random
	numbers

	* itpp/comm/llr.h: C convention for INT_MAX changed to C++
	
2007-01-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: Fixed non-portable parts of the Makefile
	reported by the latest stable automake 1.10

2007-01-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* NEWS, NEWS-3.10: NEWS file with 3.10 series information copied
	to NEWS-3.10. Preliminary information for 3.99.x
	development releases prepared in NEWS.

==============================================================================

2007-01-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.8 released (SVN tag: release-3-10-8)
	(merged rev. 828:830 from the itpp-3-10 branch)

2007-01-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* NEWS: Updated to reflect recent changes
	(merged rev. 828:830 from the itpp-3-10 branch)

	* itpp/comm/ldpc.cpp, itpp/comm/ldpc.h, tests/channel_test.cpp,
	tests/ldpc_test.cpp: Added missing SVN properities

2007-01-13  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>
